--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,7 +60,7 @@
     <h1>URL Shortener</h1>
 
     <div class="form-container">
-        <form id="urlForm" method="POST">
+        <form id="urlForm" method="POST" action="/my-form">
             <label for="urlInput">Enter URL:</label>
             <input type="text" id="urlInput" name="urlInput" required placeholder="http://this.is.way/too/long?isnt=it">
             <label for="aliasInput">Enter alias:</label>
@@ -75,18 +75,12 @@
                 <th>Original URL</th>
                 <th>Shortened URL</th>
             </tr>
-            <tr>
-                <td><a href="https://github.com/cat-backend-nodejs/nodejs-roadmap">https://github.com/cat-backend-nodejs/nodejs-roadmap</a></td>
-                <td><a href="http://localhost:3000/nodejs">http://localhost:3000/nodejs</a></td>
-            </tr>
-            <tr>
-                <td><a href="https://stackoverflow.com/users/11936196/seif-el-din-sweilam">https://stackoverflow.com/users/11936196/seif-el-din-sweilam</a></td>
-                <td><a href="http://localhost:3000/stackoverflow">http://localhost:3000/stackoverflow</a></td>
-            </tr>
-            <tr>
-                <td><a href="https://drive.google.com/drive/u/1/folders/1bpiBKNBd9n0Z79wrZvHVT1KyA9OBROLx">https://drive.google.com/drive/u/1/folders/1bpiBKNBd9n0Z79wrZvHVT1KyA9OBROLx</a></td>
-                <td><a href="http://localhost:3000/himym">http://localhost:3000/himym</a></td>
-            </tr>
+            <% urls.forEach(function(url) { %>
+                <tr>
+                    <td><a href="<%= url.original %>"><%= url.original %></a></td>
+                    <td><a href="<%= url.original %>"><%= url.alias %></a></td>
+                </tr>
+            <% }) %>
         </table>
     </div>
 </body>
